      
      A new thread will be used to actually cancel a running query, as there's potential
      for a cancel request to block other cancel requests if all run from the
      same thread.
      
nn-nn-06 - Version 3.1.15

	- Fixed BUG#23281 - Downed slave caused round-robin load balance to
	  not cycle back to first host in list.
	  
10-19-06 - Version 3.1.14

    - Fixed BUG#20479 - Updatable result set throws ClassCastException
	  when there is row data and moveToInsertRow() is called.
	  
	- Fixed BUG#20485 - Updatable result set that contains
	  a BIT column fails when server-side prepared statements are used.
	  
	- Fixed BUG#16987 - Memory leak with profileSQL=true.
	
	- Fixed BUG#19726 - Connection fails to localhost when using 
	  timeout and IPv6 is configured.
	  
	- Fixed BUG#16791 - NullPointerException in MysqlDataSourceFactory
	  due to Reference containing RefAddrs with null content.
	  
	- Fixed BUG#20306 - ResultSet.getShort() for UNSIGNED TINYINT
	  returns incorrect values when using server-side prepared statements.
	  
	- Fixed BUG#20687 - Can't pool server-side prepared statements, exception
	  raised when re-using them.
	  
	- Fixed BUG#21062 - ResultSet.getSomeInteger() doesn't work for BIT(>1).
	
	- Fixed BUG#18880 - ResultSet.getFloatFromString() can't retrieve
	  values near Float.MIN/MAX_VALUE.
	  
	- Fixed BUG#20888 - escape of quotes in client-side prepared 
	  statements parsing not respected. Patch covers more than bug report, 
	  including NO_BACKSLASH_ESCAPES being set, and stacked quote characters
	  forms of escaping (i.e. '' or "").
	  
	- Fixed BUG#19993 - ReplicationDriver does not always round-robin load
	  balance depending on URL used for slaves list.
	
	- Fixed calling toString() on ResultSetMetaData for driver-generated
	  (i.e. from DatabaseMetaData method calls, or from getGeneratedKeys())
	  result sets would raise a NullPointerException.
	  